Fix sidenav collapsing bug

--- a/packages/visual-stack/src/components/PageContent.css
+++ b/packages/visual-stack/src/components/PageContent.css
@@ -4,6 +4,5 @@
   padding: 15px 1em;
   overflow: auto;
   height: calc(100vh - 45px);
-  width: calc(100vw - 255px);
 }
 
